<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainActivity">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="284dp"
                    android:layout_height="142dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toEndOf="@+id/linearLayout"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioGroup
                        android:id="@+id/group"
                        android:layout_width="155dp"
                        android:layout_height="132dp">

                        <RadioButton
                            android:id="@+id/simple"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/simple"
                            android:textSize="18sp" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="20dp" />

                        <RadioButton
                            android:id="@+id/doble"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/doble"
                            android:textSize="18sp" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="10dp" />

                        <RadioButton
                            android:id="@+id/nbolas"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/n_bolas"
                            android:textSize="18sp"
                            tools:ignore="OnClick" />

                    </RadioGroup>

                    <LinearLayout
                        android:layout_width="130dp"
                        android:layout_height="132dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="match_parent"
                            android:layout_height="24dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/simple" />

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            app:srcCompat="@mipmap/pearls" />

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/number" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="282dp"
                    android:layout_height="175dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginLeft="28dp"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/diametro"
                        android:textSize="18sp"
                        tools:ignore="DuplicateIds" />

                    <EditText
                        android:id="@+id/diametro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="14dp" />

                    <TextView
                        android:id="@+id/anchoBola"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/grosorBola"
                        android:textSize="18sp"
                        android:visibility="visible" />

                    <EditText
                        android:id="@+id/medidaBola"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="285dp"
                    android:layout_height="383dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <LinearLayout
                        android:layout_width="285dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioGroup
                            android:id="@+id/enganche"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <RadioButton
                                android:id="@+id/con_enganche"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/enganche"
                                android:textSize="18sp" />

                            <Space
                                android:layout_width="match_parent"
                                android:layout_height="13dp" />

                            <RadioButton
                                android:id="@+id/sin_enganche"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/sinEnganche"
                                android:textSize="18sp" />

                            <Space
                                android:layout_width="match_parent"
                                android:layout_height="23dp" />

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/separacion"
                                android:textSize="18sp"
                                tools:ignore="DuplicateIds" />

                            <EditText
                                android:id="@+id/separacion"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ems="10"
                                android:inputType="numberDecimal"
                                android:text="0.1"
                                android:visibility="visible" />

                            <Space
                                android:layout_width="match_parent"
                                android:layout_height="17dp" />
                        </RadioGroup>

                    </LinearLayout>

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="185dp"
                        android:layout_height="37dp"
                        android:onClick="calculo"
                        android:text="@string/calcular"
                        tools:ignore="OnClick" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="12dp" />

                    <TextView
                        android:id="@+id/resultado"
                        android:layout_width="match_parent"
                        android:layout_height="93dp"
                        android:textColor="@color/design_default_color_on_secondary"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>