<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="310dp"
        android:layout_height="85dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/button2"
            android:layout_width="185dp"
            android:layout_height="37dp"
            android:onClick="calculo"
            android:text="Calcular" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/resultado"
            android:layout_width="match_parent"
            android:layout_height="35dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="78dp"
        android:layout_height="185dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:srcCompat="@mipmap/simple" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="79dp"
            android:layout_height="59dp"
            app:srcCompat="@mipmap/pearls" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="11dp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            app:srcCompat="@mipmap/number" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="84dp"
        android:layout_height="182dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Diámetro (cm)" />

        <EditText
            android:id="@+id/diametro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/anchoBola"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:text="Ancho de bola (cm)"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/medidaBola"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="98dp"
        android:layout_height="184dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/group"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/simple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/simple" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <RadioButton
                android:id="@+id/doble"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doble" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="29dp" />

            <RadioButton
                android:id="@+id/nbolas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/n_bolas"
                tools:ignore="OnClick" />
        </RadioGroup>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>